--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oscar's Portfolio</title>
 
-<link rel="stylesheet" href="./CSS/Homepage.css">
+<link rel="stylesheet" href="CSS/Homepage.css">
 
 </head>
 <body>
