--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
             </a>
 
         </div>
-        <div class="portfolio-item">
+        
+<!--         <div class="portfolio-item">
             <h3>Retirement Calculator</h3>
             <div class="slideshow-container">
                 <div class="slide">
@@ -167,7 +168,7 @@
         <a href="https://github.com/oocalder/MMRWebApp_Ojeda_Oscar" target="MMR Source Code">
             <button class="button">Source Code</button>
         </a>
-        </div>
+        </div> -->
         <!-- Add more projects as needed -->
     </section>
 
