--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>My driving aspiration is to ignite inspiration in those around me. 
                 While not immersed in my ongoing personal and professional pursuits, I am consistently engaged in curating and crafting a portfolio that will stand as a 
                 testament to my creative endeavors, spanning across media, projects, sonic engineering, and Development.Beyond nurturing my own creative appetite, I am dedicated to extending assistance to friends and family, bolstering their pursuit of aspirations. 
-                My overarching life objective is to cultivate enduring relationships with supervisors, mentors, and peers whose influence resonates profoundly with my own or you can say I aspire to inspire others.
+                My overarching life objective is to cultivate enduring relationships with supervisors, mentors, and peers whose influence resonates profoundly with my own.
             </p>
         </section>
     </div>
@@ -160,7 +160,7 @@
                 </div>
               
                 <!-- Next and previous buttons -->
-                <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
+<!--                 <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
                 <a class="next" onclick="changeSlide(1)">&#10095;</a>
               </div>
 
@@ -168,7 +168,7 @@
         <a href="https://github.com/oocalder/MMRWebApp_Ojeda_Oscar" target="MMR Source Code">
             <button class="button">Source Code</button>
         </a>
-        </div> -->
+        </div> --> -->
         <!-- Add more projects as needed -->
     </section>
 
