--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <section id="resume">
         <h2>Resume:</h2>
-        <img src="PNG/Resume 2024.docx.png" alt="'24 resume" id="resumeId">
+        <img src="PNG/OscarOjedaC_Resumepng.png" alt="'24 resume" id="resumeId">
     </section>
 
 <!-- 
