--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Custom CSS file link -->
-    <link rel="stylesheet" href="../masonry gallery/css/about.css">
+    <link rel="stylesheet" href="../css/about.css">
 
     <title>About - Oscar Ojeda</title>
 
