--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Custom CSS file link -->
-    <link rel="stylesheet" href="../masonry gallery/css/testerstyle.css">
+    <link rel="stylesheet" href="../css/testerstyle.css">
 
     <title>Oscar Ojeda</title>
 
