--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Custom CSS file link -->
-    <link rel="stylesheet" href="../css/testerstyle.css">
+    <link rel="stylesheet" href="./css/testerstyle.css">
 
     <title>Oscar Ojeda</title>
 
@@ -77,6 +77,6 @@
     
 </div>
 
-<script src="../masonry gallery/js/script.js"></script>
+<script src="./js/script.js"></script>
 </body>
 </html>
