--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
     <div class="about-container">
         <header class="navbar fade-in">
             <h1 class="title"><a href="../index.html" style="text-decoration: none; color: inherit;">Oscar Ojeda 0.0</a></h1>
-            <button class="toggle-theme animate-logo" aria-label="Toggle Dark Mode">0.0</button>
+<!--             <button class="toggle-theme animate-logo" aria-label="Toggle Dark Mode">0.0</button> -->
 
             <nav>
                 <ul class="menu">
