--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <img class="animate-image" src="./images/Portfolio 2025/Port-05.jpg" alt="Image 9">
         <img class="animate-image" src="./images/Portfolio 2025/Port-19.jpg" alt="Image 10">
         <img class="animate-image" src="./images/Portfolio 2025/Port-21.jpg" alt="Image 11">
+        <img class="animate-image" src="./images/Portfolio 2025/Port-22.jpg" alt="Image 12">
         <img class="animate-image" src="./images/Portfolio 2025/Port-24.jpg" alt="Image 13">
         <img class="animate-image" src="./images/Portfolio 2025/Port-14.jpg" alt="Image 14">
         <img class="animate-image" src="./images/Portfolio 2025/Port-06.jpg" alt="Image 15">
@@ -69,6 +70,7 @@
         <img class="animate-image" src="./images/Portfolio 2025/Port-10.jpg" alt="Image 24">
         <img class="animate-image" src="./images/Portfolio 2025/Port-08.jpg" alt="Image 25">
         <img class="animate-image" src="./images/Portfolio 2025/Port-12.jpg" alt="Image 26">
+        <img class="animate-image" src="./images/Portfolio 2025/Port-17.jpg" alt="Image 27">
         
     </div>
     
